src/test/deca/context/valid/declare-method.deca
// Description:
//    Déclare une méthode simple void
//
// Resultats:
//    //
//
// Historique:
//    cree le 13/01/2023

class A{
    void get(){
        
    }
}
