src/test/deca/context/invalid/declare-already-declared-class.deca
// Description:
//    Déclare une classe qui a déjà été déclarée
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 13: "A" is already a class (rule 1.3)
//
// Historique:
//    cree le 13/01/2023

class A {}

class A {}